Archive2/56/b0f4944d7bc864/output
main.cpp:7:5: error: stray '\303' in program
     mem; pública: 
     ^
main.cpp:7:5: error: stray '\272' in program
main.cpp:5:1: error: 'classe' does not name a type
 classe T2
 ^
